--- a/src/app/authentication/sign-in/sign-in.component.scss
+++ b/src/app/authentication/sign-in/sign-in.component.scss
@@ -9,6 +9,14 @@
     background-color: #fff;
     padding: 2em;
     border-radius: 20px;
+    input.ng-invalid.ng-touched {
+      border: 1px solid red;
+    }
+    .help {
+      color: red;
+      font-size: 0.8em;
+      margin-top: 0.5em;
+    }
     .btn-sign {
       float: right;
       color: #fff;
