--- a/src/app/authentication/sign-up/sign-up.component.html
+++ b/src/app/authentication/sign-up/sign-up.component.html
@@ -8,8 +8,7 @@
                         <div class="form-group">
                             <label for="validationServer01">Full name</label>
                             <input type="text" class="form-control" id="validationServer01" formControlName="name">
-                            <span class="help"
-                                *ngIf="!signUpForm.get('name').valid && signUpForm.get('name').touched">
+                            <span class="help" *ngIf="!signUpForm.get('name').valid && signUpForm.get('name').touched">
                                 Please enter vaild name!
                             </span>
                         </div>
@@ -17,14 +16,15 @@
                             <label for="exampleInputEmail1">Email address</label>
                             <input type="email" class="form-control" id="exampleInputEmail1"
                                 aria-describedby="emailHelp" formControlName="email">
-                                <span class="help"
+                            <span class="help"
                                 *ngIf="!signUpForm.get('email').valid && signUpForm.get('email').touched">
                                 Please enter vaild email!
                             </span>
                         </div>
                         <div class="form-group">
                             <label for="exampleInputPassword1">Password</label>
-                            <input type="password" class="form-control" id="exampleInputPassword1" formControlName="password">
+                            <input type="password" class="form-control" id="exampleInputPassword1"
+                                formControlName="password">
                             <span class="help"
                                 *ngIf="!signUpForm.get('password').valid && signUpForm.get('password').touched">
                                 Please enter vaild password!
@@ -32,9 +32,10 @@
                         </div>
                         <div class="form-group">
                             <label for="exampleInputPassword2">Confirm Password</label>
-                            <input type="password" class="form-control" id="exampleInputPassword2" formControlName="confirm-pass">
+                            <input type="password" class="form-control" id="exampleInputPassword2"
+                                formControlName="confirm-pass">
                             <span class="help"
-                                *ngIf="!signUpForm.get('confirm-pass').valid && signUpForm.get('confirm-pass').touched">
+                                *ngIf="!signUpForm.get('confirm-pass').valid && signUpForm.get('confirm-pass').touched || signUpForm.get('confirm-pass') != signUpForm.get('password')">
                                 Passwords not matching!
                             </span>
                         </div>
