--- a/src/app/movies/header/header.component.html
+++ b/src/app/movies/header/header.component.html
@@ -10,7 +10,7 @@
           <a class="nav-link" routerLink="/movies/liked-movies">Likes</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Favorites</a>
+          <a class="nav-link" routerLink="/movies/favourit-movies">Favorites</a>
         </li>
       </ul>
       </div>
