--- a/src/app/movies/movies-home/movie-card/movie-card.component.scss
+++ b/src/app/movies/movies-home/movie-card/movie-card.component.scss
@@ -2,6 +2,7 @@
   height: 25em;
   background-color: #555;
   border-color: #555;
+  border: none;
   color: #fff;
   margin-bottom: 1em;
   img {
@@ -20,11 +21,10 @@
       color: rgb(228, 228, 228);
       margin-bottom: 0.5em;
     }
-    .icones {
+    .btns {
       .like,
       .fav {
         float: right;
-        margin: 0 0.3em;
         color: rgb(42, 151, 151);
         font-size: 1.2em;
       }
