--- a/src/app/movies/header/header.component.html
+++ b/src/app/movies/header/header.component.html
@@ -5,7 +5,10 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav ml-auto">
+      <ul class="navbar-nav m-auto">
+        <li class="nav-item active">
+          <a class="nav-link" routerLink="/movies">Home</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/movies/liked-movies">Likes</a>
         </li>
