--- a/src/app/movies/header/header.component.scss
+++ b/src/app/movies/header/header.component.scss
@@ -1,8 +1,13 @@
-.header{
-    padding: 1em;
-    background-color: #fff;
-    margin-bottom: 2em;
-    border-radius: 5px;
-    color: #333;
-    font-weight: bold;
+.header {
+  padding: 1em;
+  background-color: #fff;
+  margin-bottom: 2em;
+  border-radius: 5px;
+  color: #333;
+  font-weight: bold;
+  .navbar-nav {
+    .active>.nav-link {
+      color: rgb(42, 151, 151);
+    }
+  }
 }
