--- a/src/app/movies/likes/likes.component.html
+++ b/src/app/movies/likes/likes.component.html
@@ -1,8 +1,7 @@
-<app-header></app-header>
 <div class="likes">
     <div class="container">
         <div class="row">
-            <div class="col-md-3" *ngFor="let like of likedMovies | keyvalue">
+            <div class="col-md-3" *ngFor="let like of likedMovies">
                 <app-movie-card [movie]='like'></app-movie-card>
             </div>
         </div>
