changes ofr like and fav

--- a/src/app/movies/header/header.component.scss
+++ b/src/app/movies/header/header.component.scss
@@ -6,7 +6,7 @@
   color: #333;
   font-weight: bold;
   .navbar-nav {
-    .active>.nav-link {
+    .nav-link {
       color: rgb(42, 151, 151);
     }
   }
