--- a/src/app/authentication/sign-up/sign-up.component.scss
+++ b/src/app/authentication/sign-up/sign-up.component.scss
@@ -23,6 +23,14 @@
           color: rgb(42, 151, 151);
         }
       }
+      input.ng-invalid.ng-touched {
+        border: 1px solid red;
+      }
+      .help {
+        color: red;
+        font-size: 0.8em;
+        margin-top: 0.5em;
+      }
     }
   }
   
