--- a/src/app/authentication/sign-in/sign-in.component.html
+++ b/src/app/authentication/sign-in/sign-in.component.html
@@ -1,34 +1,27 @@
 <div class="sign-in">
-    <div class="container">
-        <div class="row">
-            <div class="offset-md-3"></div>
-            <div class="col-md-6">
-                <div class="form-details">
-                    <form [formGroup]="signInForm" (ngSubmit)="onSignIn()">
-                        <div class="form-group">
-                            <label for="exampleInputEmail1">Email address</label>
-                            <input type="email" class="form-control" id="exampleInputEmail1"
-                                aria-describedby="emailHelp" formControlName="email">
-                            <span class="help"
-                                *ngIf="!signInForm.get('email').valid && signInForm.get('email').touched">
-                                Please enter vaild email!
-                            </span>
-                        </div>
-                        <div class="form-group">
-                            <label for="exampleInputPassword1">Password</label>
-                            <input type="password" class="form-control" id="exampleInputPassword1"
-                                formControlName="password">
-                            <span class="help"
-                                *ngIf="!signInForm.get('password').valid && signInForm.get('password').touched">
-                                Please enter vaild password!
-                            </span>
-                        </div>
-                        <button type="submit" class="btn btn-sign">Sign in</button>
-                    </form>
-                    <h6>Don't have account? <a routerLink="/authentication/sign-up">Sign up</a></h6>
-                </div>
+  <div class="container">
+    <div class="row">
+      <div class="offset-md-3"></div>
+      <div class="col-md-6">
+        <div class="form-details">
+          <form [formGroup]="signInForm" (ngSubmit)="onSignIn()">
+            <div class="form-group">
+              <label for="exampleInputEmail1">Email Address*</label>
+                <input type="email" class="form-control" id="exampleInputEmail1"
+                       aria-describedby="emailHelp" formControlName="email">
+                <span class="help" *ngIf="!signInForm.get('email').valid && signInForm.get('email').touched">Email Address is required!</span>
             </div>
-            <div class="offset-md-3"></div>
+            <div class="form-group">
+              <label for="exampleInputPassword1">Password*</label>
+              <input type="password" class="form-control" id="exampleInputPassword1"
+                     formControlName="password">
+              <span class="help" *ngIf="!signInForm.get('password').valid && signInForm.get('password').touched">Password is required!</span>
+            </div>
+            <button type="submit" class="btn btn-sign" [disabled]="signInForm.invalid">Sign in</button>
+          </form>
+          <h6>Don't have account? <a routerLink="/authentication/sign-up">Sign up</a></h6>
         </div>
+      </div>
     </div>
+  </div>
 </div>
