--- a/src/app/movies/header/header.component.html
+++ b/src/app/movies/header/header.component.html
@@ -1,7 +1,8 @@
 <nav class="navbar header navbar-expand-lg navbar-light">
-    <div class="container">
-    <a class="navbar-brand" >Hello {{name}}</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+  <div class="container">
+    <a class="navbar-brand">Hello {{name}}</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -16,6 +17,7 @@
           <a class="nav-link" routerLink="/movies/favourit-movies">Favorites</a>
         </li>
       </ul>
-      </div>
     </div>
-  </nav>
+    <button class="btn btn-sign" (click)="onClickLogOut()">Log Out</button>
+  </div>
+</nav>
