--- a/src/app/movies/movies-home/movie-card/movie-card.component.html
+++ b/src/app/movies/movies-home/movie-card/movie-card.component.html
@@ -4,12 +4,11 @@
     </a>
     <div class="card-body">
         <h5 class="card-title">{{movie.original_title}}</h5>
-        <p class="card-text">{{(movie.overview?.length>90)? (movie.overview | slice:0:90)+' ...
-            ':(movie.overview)}}</p>
+        <p class="card-text">{{movie.overview?.length>90 ? (movie.overview | slice:0:90)+' ...':(movie.overview)}}</p>
         <div class="btns">
-            <button class="btn like" (click)="getLiked(movie)">
+            <button class="btn like" (click)="checkUncheckLike(movie)">
                 <i  [ngClass]="{ 'fas' :  movie.isLiked  , 'far' : !movie.isLiked }" class="fa-thumbs-up"></i></button>
-            <button class="btn fav" (click)="getFavourits(movie)">
+            <button class="btn fav" (click)="checkUncheckFavourite(movie)">
                 <i [ngClass]="{ 'fas' :  movie.isFav  , 'far' : !movie.isFav }" class="fa-heart"></i></button>
         </div>
     </div>
