--- a/src/app/movies/header/header.component.scss
+++ b/src/app/movies/header/header.component.scss
@@ -10,4 +10,12 @@
       color: rgb(42, 151, 151);
     }
   }
+  .btn-sign {
+    float: right;
+    color: #fff;
+    background-color: rgb(42, 151, 151);
+    border-radius: 10px;
+    padding: 0.4em 1.7em;
+    font-weight: 600;
+  }
 }
