--- a/src/app/movies/likes/likes.component.html
+++ b/src/app/movies/likes/likes.component.html
@@ -1,5 +1,9 @@
 <div class="likes">
     <div class="container">
+        <div class="no-data" *ngIf="likedMovies.length == 0">
+            <img src="assets/cancel.png" alt="">
+            <h3>No data to show</h3>
+        </div>
         <div class="row">
             <div class="col-md-3" *ngFor="let like of likedMovies">
                 <app-movie-card [movie]='like'></app-movie-card>
